tests/NormalTests/paczka2/big_fuzzy/81518719.err
Error in line 5: TtV A734 45,17
Error in line 4: 2nY A723 59,8
Error in line 8: 550iad4L S186 68,6
Error in line 18: 50u S18* 270,9
Error in line 19: 2nY S236 2,9
Error in line 17: 50u S186 64,8
Error in line 25: 50u A734 76,0
Error in line 28: TtV A734 34,6
Error in line 36: TtV S236 14,6
Error in line 22: S186 S186 5,4
Error in line 47: 550iad4L A734 60,4
Error in line 48: 2nY A723 44,1
Error in line 63: TtV S236 136,6
Error in line 68: 550iad4L A723 20,<
Error in line 72: 2nY A723 85,1
Error in line 41: 50u S186 260,1
Error in line 83: spFRw S186 8,7
Error in line 95: 550iad4L A734 99,9
Error in line 99: 50u S186 71,3
Error in line 105: WUa S236 50,7
Error in line 91: spFRw S186 52,3
Error in line 98: 550iad4L A723 38,3
Error in line 111: 550iad4L S186 29,5
Error in line 119: 550iad4L S236 62,1
Error in line 123: 2nY A723 100,0
Error in line 153: S186 A723 71,0
Error in line 161: 550iad4L S236 1y0,y
Error in line 154: 50u A734 49,6
Error in line 166: spFRw A734 54,6
Error in line 168: 50u S186 8,3
Error in line 171: 50u S236 84,1
Error in line 159: 550iad4L S236 65,4
Error in line 175: 50u A723 4,8
Error in line 179: 550iad4L S186 94,1
Error in line 183: 550iad4L S236 48,9
Error in line 163: TtV A723 141,1
Error in line 187: 2nY S186 41,2
Error in line 199: S186 S186 14,62
Error in line 206: spFRw A723 36,6
Error in line 207: 50u S236 89,0
Error in line 212: 50u A723 64,0
Error in line 216: spFRw S236 12,5
